# Work.io-Website

./: .replit  LICENSE  README.md  app.py  db.py  pyproject.toml
templates/: application_form.html  application_submitted.html  bootstrap.html  footer.html  homedemo.html  jobitem.html  jobpage.html  login.html  navbar.html  register.html
